# OCTGui

./: .clang-tidy  README.md  calc_sampling.py  vcpkg.json
.github/workflows/: build.yml
scripts/: background.py
src/: AcquisitionController.cpp  AcquisitionController.hpp  CMakeLists.txt  Calibration.hpp  Common.hpp  DAQ.cpp  DAQ.hpp  ExportSettings.hpp  FileIO.hpp  FrameController.hpp  ImageDisplay.hpp  MainWindow.cpp  MainWindow.hpp  MotorDriver.hpp  OCTData.hpp  OCTRecon.hpp  OCTReconParamsController.hpp  Overlay.hpp  ReconWorker.hpp  RingBuffer.hpp  datetime.hpp  defer.h  fftw.hpp  main.cpp  phasecorr.hpp  strOps.hpp  timeit.hpp
src/Annotation/: Annotation.cpp  Annotation.hpp  AnnotationJsonFile.cpp  AnnotationJsonFile.hpp  AnnotationModel.cpp  AnnotationModel.hpp  GeometryUtils.cpp  GraphicsItems.cpp
src/resources/icons/: OCTGui.icns  OCTGui.rc  make_ico.bat  make_icons.sh
triplets/: arm64-osx.cmake
